--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -64,14 +64,14 @@
             <h2 class="section-heading">Send Us an Email</h2>
               <form action="/contact" method="post">
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <label for="email">Email address</label>
+                  <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" name="email">
                   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlTextarea1">What's your message?</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                  <small id="texthelp" class="form-text text-muted">Our admins love links, they will always look at examples of issues you might have! (and they are <i>very</i> quick!!)</small>
+                  <label for="message">What's your message?</label>
+                  <textarea class="form-control" id="message" rows="3" name="message"></textarea>
+                  <small id="texthelp" class="form-text text-muted" >Our admins love links, they will always look at examples of issues you might have! (and they are <i>very</i> quick!!)</small>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
