--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -73,6 +73,7 @@
                   <textarea class="form-control" id="message" rows="3" name="message"></textarea>
                   <small id="texthelp" class="form-text text-muted" >Our admins love links, they will always look at examples of issues you might have! (and they are <i>very</i> quick!!)</small>
                 </div>
+                <%- captcha %>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
           </div>
