--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,8 @@
     <header class="intro-header">
       <div class="container">
         <div class="intro-message">
-          <h1 id="debug"><%= title %></h1>
-          <h3><%= description %> <%- page %></h3>
+          <h1><%= title %></h1>
+          <h3><%= description %></h3>
           <hr class="intro-divider">
         </div>
       </div>
